manifests/nautobot/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nautobot
  labels:
    app.kubernetes.io/name: nautobot
    app.kubernetes.io/component: ipam
